efk/ns-efk.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: efk
   labels:
     name: efk
